// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Component matches the snapshot (non-editable-grey) 1`] = `
<div>
  <input
    className="editable-white"
    id="textInputId"
    onChange={[Function]}
    placeholder="Enter id"
    readOnly={true}
    type="text"
  />
  <br />
  <span
    className="error"
  />
</div>
`;

exports[`Input Component when mandatory and no label matches the snapshot (editable white) 1`] = `
<div>
  <input
    className="editable-white"
    id="textInputId"
    onChange={[Function]}
    placeholder="Enter id"
    readOnly={false}
    type="text"
  />
  <br />
  <span
    className="error"
  />
</div>
`;

exports[`Input Component when mandatory and with label matches the snapshot (editable white) 1`] = `
<div>
  <label
    className="label"
    htmlFor="textInputId"
  >
    <div
      className="input-label"
    >
      Submission ID
    </div>
    <span
      className="mandatory"
      id="asterisk"
    >
      *
    </span>
     
    <span
      className="note"
    />
  </label>
  <input
    className="editable-white"
    id="textInputId"
    onChange={[Function]}
    placeholder="Enter id"
    readOnly={false}
    type="text"
  />
  <br />
  <span
    className="error"
  />
</div>
`;

exports[`Input Component when not mandatory and no label matches the snapshot (editable white) 1`] = `
<div>
  <input
    className="editable-white"
    id="textInputId"
    onChange={[Function]}
    placeholder="Enter id"
    readOnly={false}
    type="text"
  />
  <br />
  <span
    className="error"
  />
</div>
`;

exports[`Input Component when not mandatory and with label matches the snapshot (editable white) 1`] = `
<div>
  <label
    className="label"
    htmlFor="textInputId"
  >
    <div
      className="input-label"
    >
      Submission ID
    </div>
    
     
    <span
      className="note"
    />
  </label>
  <input
    className="editable-white"
    id="textInputId"
    onChange={[Function]}
    placeholder="Enter id"
    readOnly={false}
    type="text"
  />
  <br />
  <span
    className="error"
  />
</div>
`;
